# TimeSeriesCounterfactuals

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml
docs/: adoption-playbook.md  agent-first-design.md  api-atlas.md  api-handbook.md  benchmark-cards.md  benchmark-protocol.md  bring-your-own-data.md  capability-map.md  cli-guide.md  demo-gallery.md  doctor.md  ecosystem-audit.md  environments.md  essential-commands.md  faq.md  feature-coverage.md  feedback-changes.md  github-readme.md  high-traffic-cases.md  index.md  installation.md  package-story.md  plain-language-guide.md  public-data-sources.md  quickstart.md  release-playbook.md  scenario-matrix.md  showcase-gallery.md  start-here.md  tool-profiles.md  try-now.md  tutorial-index.md  use-cases.md  what-is-tscfbench.md  why-tscfbench.md  workflow-recipes.md
examples/: agent_bundle_demo.py  benchmark_card_demo.py  canonical_benchmark_demo.py  city_traffic_demo.py  commodity_event_demo.py  crypto_event_demo.py  custom_panel_data_demo.py  detector_downtime_demo.py  doctor_demo.py  electricity_shock_demo.py  github_stars_event_demo.py  heatwave_health_demo.py  mcp_roundtrip_demo.py  minimum_wage_employment_demo.py  openai_function_tools_demo.py  package_tour.py  panel_research_demo.py  product_launch_demo.py  python_first_panel_demo.py  quickstart_demo.py  recommend_path_demo.py  release_kit_demo.py  viral_attention_demo.py
notebooks/: 01_start_here.ipynb  02_package_tour.ipynb  03_canonical_benchmark.ipynb  04_custom_panel_data.ipynb  05_agent_workflow.ipynb  06_impact_workflow.ipynb  07_method_paper_sweep.ipynb  08_high_traffic_cases.ipynb  09_public_data_loaders.ipynb  10_release_assets.ipynb  11_city_traffic_demo.ipynb  12_product_launch_demo.ipynb  13_heatwave_health_demo.ipynb  14_electricity_shock_demo.ipynb  15_climate_grid_demo.ipynb  16_hospital_surge_demo.ipynb  17_repo_breakout_demo.ipynb  18_detector_downtime_demo.ipynb  19_minimum_wage_employment_demo.ipynb  20_viral_attention_demo.ipynb  (+1 more)
(+128 files in other folders)
